json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,104 @@
 {
  "items": [
   {
+    "id": "ZdUvg7hJSvmwLkRxydQKmA",
+    "url": "https://remote.co/job/text-team-coordinator/",
+    "title": "Text Team Coordinator",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "DBG_TECH1:k/t/w:classification/bigdata-ml/1",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=1, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/bigdata-ml",
+      "TITLE1/unknown",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "American time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "bigdata-ml"
+    ],
+    "hiringOrganization": {
+      "name": "MoveOn.org",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 31, 2018 4:20:20 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Text Team Coordinator at <span>MoveOn.org</span></h2><div><span><i></i> Remote</span>        </div><div>            <p><strong>Temporary</strong></p><p><strong>Work from Anywhere in Continental U.S.</strong></p><p><strong>Full-time, 12-Week Position</strong></p><p><strong>Starts ASAP</strong></p><p><strong>Competitive Pay</strong></p><p><strong>Excellent Benefits</strong></p><p><strong>Description</strong></p><p>MoveOn.org’s team of campaigners and organizers identify, develop, and execute high-impact and game-changing campaigns that empower MoveOn members to achieve concrete victories and further a progressive agenda. We are looking for a Text Team Manager who will specialize in scalable organizing through innovative use of the latest peer-to-peer SMS technology and a team of savvy and committed MoveOn volunteer members–the Text Team.</p><p>We’re seeking a passionate, inventive, collaborative colleague to expand the team in the critical fights that are already beginning in this new political era. The Text Team Coordinator will work closely with MoveOn’s mobile, electoral, and analysis teams, and will report to MoveOn’s Mobile Innovation Director.</p><p>Our country is facing a unique threat from Trump, his bigoted, destructive, and corrupt politics, and the Republicans who control Congress. We’ll need to oppose and resist Trump’s agenda in Washington, defend and support frontline communities facing attacks both from his vicious policies and from an increase in hate crimes and harassment, and lay the groundwork for electoral victories.</p><p>MoveOn.org is a community of millions of members working together to create progressive change in America. We take on campaigns to challenge entrenched power and push back against right-wing policies, while pursuing economic, racial, and social justice.</p><p><strong>Responsibilities</strong></p><ul><li>You will quickly become an expert at Spoke, our MoveOn-maintained open-source peer-to-peer texting tool, and use it to directly aid in our membership growth</li><li>You will assist in recruiting, training, and managing a team of super-volunteers who constitute the Text Team’s onboarding team, chat moderators, data support, and other specialized roles.</li><li>You will participate in a collaborative editing culture to craft our best campaigns.</li><li>You will drive a data-informed program with metrics</li></ul><p><strong>Required skills and experience:</strong></p><ul><li>Experience in volunteer team management</li><li>Strong writing skills for a popular audience</li><li>Ability to parse and re-organize spreadsheets quickly using formulas Microsoft Excel, Google Sheets, or similar spreadsheet software</li><li>Nimbleness and organization to execute multiple campaigns simultaneously.</li><li>Attention to detail in writing and composition</li><li>A team spirit, or the ability to work together with an attitude of low ego, high output, trusting each other, communicating honestly, and pitching in on across projects</li></ul><p><strong>Nice to have:</strong></p><ul><li>Experience with field or community organizing</li><li>Proficiency in Slack</li><li>Ability to understand database schema and write database queries</li></ul><p><strong>Location:</strong>&nbsp;<strong>Position may be based anywhere in the continental United States.</strong></p><p><strong>Reports to:&nbsp;</strong>Mobile Innovation Director</p><p>Classification, Salary, and Benefits:&nbsp;<strong>Full-time, temporary;&nbsp;</strong>highly competitive salary, including benefits such as 100%-employer-paid premiums for medical, dental, and vision insurance for all staff and their children; employer-paid premiums for life insurance for all staff; 13.32 hours accrued vacation per month, 6.66 hours accrued sick leave per month; and reimbursement of home office expenses and enrollment in our retirement savings account after 6 months of employment.</p><p>MoveOn.org Civic Action and MoveOn.org Political Action provide equal employment opportunities (EEO) to all employees and applicants for employment without regard to race, color, religion, gender, sexual orientation, gender identity or expression, national origin, age, disability, genetic information, marital status, amnesty, or status as a covered veteran in accordance with applicable federal, state and local laws.</p>        </div><div>        <a href='https://front.moveon.org/careers/?gh_jid=1306500' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "SpIobJRGRcKsu-jL7-YYNA",
+    "url": "https://remote.co/job/virtual-assistant-belay-15/",
+    "title": "Virtual Assistant",
+    "tags": [
+      "DBG:surround``flexibl 3W work 2W from 2W home",
+      "DBG:surround``remot 3N OR(options, avail, allow) NOT encourag",
+      "DBG_TECH1:k/t/w:macos/apple/2",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=2, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/apple",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "apple"
+    ],
+    "hiringOrganization": {
+      "name": "BELAY",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 31, 2018 3:50:32 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Virtual Assistant at <span>BELAY</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span></div><div>            <h4><strong>VIRTUAL ASSISTANT</strong></h4><p>Want to enjoy the flexibility of working from home with the leading virtual assistant provider in the United States? BELAY is a top-ranked virtual solutions company looking for highly-motivated virtual assistants, who have a passion for serving others. Come join us and experience the freedom of working virtually with the ideal work/life balance to match your professional pursuit.</p><h4><strong>WHY BELAY?</strong></h4><ul><li>Entrepreneur Magazine&nbsp;ranked BELAY the number one in Best Culture for Small-Sized Companies and the Top Company Culture for a Small Business Award for having a “productive” and “high-performance” culture</li><li>Recognized by&nbsp;Inc. Magazine&nbsp;as one of the Fastest Growing Companies in the United States in 2015</li><li>Received the ‘When Work Works’ Award from the Society of Human Resource Management, recognizing “companies that offer effective and flexible workplace strategies, empowering their organization to rise above the competition.”</li><li>Atlanta Business Chronicle&nbsp;(BELAY’s headquarters) named BELAY one of the “Best Places to Work”</li></ul><h4><strong>ARE YOU LOOKING FOR:</strong></h4><ul><li>A remote position where you serve as your client’s indispensable partner?</li><li>An opportunity to use your talents and skills to build your client’s success?</li><li>A community of contractors to share ideas and best practices?</li><li>Regular support and guidance from your BELAY team?</li></ul><h4><strong>Essential Functions/Responsibilities:</strong></h4><ul><li>Maintain executive’s appointments/calendar</li><li>Email management and organization</li><li>Prepare presentations and/or spreadsheets</li><li>Social Media management</li><li>Create structure/workflow/processes</li><li>Research technologies and make recommendations</li><li>CRM administration: updates and data entry</li><li>Make travel arrangements, such as booking flights, cars, and making hotel and restaurant reservations.</li><li>Event planning and coordination</li><li>Project Assistance/Coordination</li></ul><h4><strong>Key Attributes:</strong></h4><ul><li>Detail-oriented, organized and efficient</li><li>Extremely self-motivated with strong time management</li><li>Proactive, pragmatic, and resourceful problem solver</li><li>Trustworthy and reliable</li><li>Friendly and professional communicator</li><li>Ability to manage multiple priorities and meet or beat deadlines with no errors</li><li>Tech Savvy and quick to learn new concepts</li><li>Ability to anticipate the needs of others coupled with a strong desire to serve</li><li>Adaptable</li></ul><h4><strong>Key Qualifications:</strong></h4><ul><li>Bachelor’s Degree and experience working remotely preferred</li><li>Available daily (Mon-Fri) during business hours, and able to dedicate at least 20 hour/week</li><li>At least five years’ experience in an administrative support role</li><li>In-home office setup including: Mac or PC Computer (including webcam) with minimum 1.0ghz dual core processor, 8gb, and the most recent version of MS Office installed (all programs; Word, Excel, Outlook, PowerPoint)</li><li>A fast and reliable internet connection</li><li>Smartphone with email capabilities</li><li>Designated professional, quiet space</li></ul><h4><strong>NOTE:</strong></h4><ul><li>This is a 1099 Contractor Role</li><li>All applicants may be subject to a background check prior to an offer of employment or contract being issued</li><li>BELAY participates in E-Verify</li></ul>        </div><div>        <a href='https://belay.applytojob.com/apply/H8fkSHmq99/Virtual-Assistant' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "aWefytKuQyusOEYWXxN_KQ",
     "url": "https://remote.co/job/english-translator/",
     "title": "English Translator",
