json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -100,7 +100,7 @@
     ],
     "hiringOrganization": {
       "name": "Scal.io",
-      "sameAs": "https://angel.co/job_lists/1/browse_startups_table?startups[]=75193&listings[0][]=67039&listings[0][]=7304&listings[0][]=7305"
+      "sameAs": "UNSET"
     },
     "salary": {
       "currency": "$",
@@ -515,7 +515,7 @@
     ],
     "hiringOrganization": {
       "name": "Stop, Breathe & Think, PBC",
-      "sameAs": "https://angel.co/job_lists/1/browse_startups_table?startups[]=986460&listings[0][]=139879"
+      "sameAs": "UNSET"
     },
     "salary": {
       "currency": "$",
@@ -586,7 +586,7 @@
     ],
     "hiringOrganization": {
       "name": "Open Health Network",
-      "sameAs": "https://angel.co/job_lists/1/browse_startups_table?startups[]=171649&listings[0][]=54021&listings[0][]=86122&listings[0][]=120532&listings[0][]=37677"
+      "sameAs": "UNSET"
     },
     "salary": {
       "currency": "$",
@@ -652,7 +652,7 @@
     ],
     "hiringOrganization": {
       "name": "LookFwd",
-      "sameAs": "https://angel.co/job_lists/1/browse_startups_table?startups[]=883653&listings[0][]=95055"
+      "sameAs": "UNSET"
     },
     "salary": {
       "currency": "$",
@@ -706,7 +706,7 @@
     ],
     "hiringOrganization": {
       "name": "Phötage",
-      "sameAs": "https://angel.co/job_lists/1/browse_startups_table?startups[]=732471&listings[0][]=71624&listings[0][]=111304&listings[0][]=71545"
+      "sameAs": "UNSET"
     },
     "salary": {
       "currency": "$",
