--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -216,7 +216,7 @@
     ],
     "hiringOrganization": {
       "name": "Forkable",
-      "sameAs": ""
+      "sameAs": "UNSET"
     },
     "salary": {
       "currency": "$",
@@ -267,7 +267,7 @@
     ],
     "hiringOrganization": {
       "name": "Forkable",
-      "sameAs": ""
+      "sameAs": "UNSET"
     },
     "salary": {
       "currency": "$",
@@ -1707,7 +1707,7 @@
     ],
     "hiringOrganization": {
       "name": "ACT Cooperative Corporation AS",
-      "sameAs": "https://angel.co/job_lists/1/browse_startups_table?startups[]=705563&listings[0][]=67237"
+      "sameAs": "UNSET"
     },
     "salary": {
       "currency": "UNSET",
@@ -1871,7 +1871,7 @@
     ],
     "hiringOrganization": {
       "name": "Lurkin",
-      "sameAs": "https://angel.co/job_lists/1/browse_startups_table?startups[]=282728&listings[0][]=66538&listings[0][]=66537&listings[0][]=66539&listings[0][]=66540&listings[0][]=66594&listings[0][]=66593&listings[0][]=66591&listings[0][]=71410&listings[0][]=66592"
+      "sameAs": "UNSET"
     },
     "salary": {
       "currency": "$",
@@ -1925,7 +1925,7 @@
     ],
     "hiringOrganization": {
       "name": "InCloudCounsel",
-      "sameAs": "https://angel.co/job_lists/1/browse_startups_table?startups[]=220477&listings[0][]=95491&listings[0][]=95296&listings[0][]=32238"
+      "sameAs": "UNSET"
     },
     "salary": {
       "currency": "$",
