json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -43,7 +43,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -169,7 +169,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -230,7 +230,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -284,7 +284,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -348,7 +348,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -459,7 +459,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -772,7 +772,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -821,7 +821,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -869,7 +869,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
