--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -31,7 +31,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -80,7 +80,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -128,7 +128,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -173,7 +173,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -324,7 +324,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -369,7 +369,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -418,7 +418,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -463,7 +463,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -508,7 +508,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -557,7 +557,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -650,7 +650,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -698,7 +698,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -745,7 +745,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -790,7 +790,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -835,7 +835,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -882,7 +882,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -929,7 +929,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -978,7 +978,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1023,7 +1023,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1068,7 +1068,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1113,7 +1113,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1161,7 +1161,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1213,7 +1213,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1264,7 +1264,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1309,7 +1309,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1361,7 +1361,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1418,7 +1418,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1469,7 +1469,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1515,7 +1515,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1560,7 +1560,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1609,7 +1609,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1651,12 +1651,12 @@
       "sameAs": "http://www.sandtexusa.com"
     },
     "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
+      "currency": "$",
+      "minValue": 10,
+      "maxValue": 10,
       "info": "",
-      "unit": "UNSET",
-      "parser": "UNSET",
+      "unit": "HOUR",
+      "parser": "SalaryParserLargeText",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1769,7 +1769,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -1820,7 +1820,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -2036,7 +2036,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -2083,7 +2083,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -2190,7 +2190,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -2264,7 +2264,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -2315,7 +2315,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -2360,7 +2360,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -2405,7 +2405,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
-      "parser": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
       "isEquity": false
     },
     "employmentType": "UNSET",
