json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,159 @@
 {
  "items": [
   {
+    "id": "DFDZuuiURhGVWss0FDURRQ",
+    "url": "https://news.ycombinator.com/item?id=17903136",
+    "title": "Rival | Multiple roles | Los Angeles | Remote | Full-time | https://rival.co (https://rival.co/) Rival is building ...",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:python/python/2",
+      "DBG_TECH1:k/t/w:reactjs/frontend/8",
+      "DBG_TECH1:k/t/w:typescript/frontend/1",
+      "DBG_TECH1:k/t/w:typescript/nodejs/1",
+      "DBG_TECH1:techWeightMap:{python=2, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=1, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=9}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 3, 2018 5:41:06 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<span>Rival | Multiple roles | Los Angeles | Remote | Full-time | <a href='https://rival.co' rel='nofollow'>https://rival.co</a> (<a href='https://rival.co/' rel='nofollow'>https://rival.co/</a>)<p>Rival is building the operating system for the world's biggest venues. Ticketing is just one aspect of our platform, and by managing the inventory and truly digitizing the ticket by linking access to biometrics, we will be able to drive commerce, intelligence about fans, and enhanced security.</p><p>We have extraordinary engineers, PMs, and designers from the best technology companies in the world, who are working together to solve the many challenges of bringing millions of fans together for the music and sports events that they love. With investment from Andreessen, Upfront, sports teams from every major league in the US, and the leaders of Instagram, Twitter, Slack, and Stripe, we have the financial runway to build this platform the right way, from the ground up. We have revenue on the horizon and our first clients will be going live next year.</p><p>Our stack is mostly Python 3 and ES6+/TypeScript/React Native backed by AWS Lambda, Fargate, Kinesis, SQS, Aurora, and Dynamo. We're heavy AWS users with all infrastructure managed by Terraform. Local development and CI use Docker extensively. We're interested in engineers with expertise in these or similar technologies, or with background in distributed systems in general. We're especially interested if you're also passionate about building things, enjoy continuing to learn and grow, value open communication, and strong collaboration.</p><p>This is the opportunity you have been waiting for - hard engineering problems to solve; the conditions to move quickly and do your best work; to push yourself while having impact; to work with other exceptional people; and the chance to be a part of the early team that is building the technology platform that will change an industry.</p><p>Read more and apply via <a href='https://rival.co' rel='nofollow'>https://rival.co</a>, or fast-track your application by completing the short CTF starting at <a href='https://hacker.rival.rocks' rel='nofollow'>https://hacker.rival.rocks</a>.</p></span>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "HE6fVwfPQKmWJc6KsK_9Dg",
+    "url": "https://news.ycombinator.com/item?id=17903107",
+    "title": "Take a stab at our little challenge and ensure your CV gets reviewed by our team: https://challenge.curbside.com ...",
+    "tags": [
+      "DBG:surround``4N( OR(look, search),     4N(OR(distribut, remot), OR(employe,develop,engin,team)) )",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:clojure/other/5",
+      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/16",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:k/t/w:javascript/frontend/1",
+      "DBG_TECH1:k/t/w:javascript/nodejs/1",
+      "DBG_TECH1:k/t/w:machine-learning/bigdata-ml/2",
+      "DBG_TECH1:k/t/w:python/python/2",
+      "DBG_TECH1:techWeightMap:{python=2, other=5, dotnet=0, c=0, mobile=4, go=0, nodejs=1, bigdata-ml=18, ruby=0, apple=2, java=1, gamedev=0, php=0, embedded=0, frontend=1}",
+      "REMOTE1/100",
+      "TECH1/bigdata-ml",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "bigdata-ml"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 3, 2018 5:37:06 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<span>Take a stab at our little challenge and ensure your CV gets reviewed by our team: <a href='https://challenge.curbside.com' rel='nofollow'>https://challenge.curbside.com</a>Curbside is enabling a new way to shop, built for the era of instant mobile commerce. The Curbside app makes it easy to find, buy and pickup products at nearby stores. Curbside searches realtime local inventory across retailers and uses location-based technologies to alert stores when a customer is arriving for a pickup. Curbside helps consumers quickly get what they need and helps retailers better serve their increasingly mobile centric customers. The Curbside Merchant Console enables alerts to staff as customers arrive to pick up orders and also manages online order workflow.<p>Curbside’s investors include Sutter Hill Ventures, Index Ventures, Jerry Yang’s AME Cloud Ventures, Qualcomm Ventures, Eric Schmidt’s Innovation Endeavors, O’Reilly AlphaTech Ventures, Gil Elbaz &amp; David Waxman’s TenOneTen and Chicago Ventures.</p><p>Tech Stack: Clojure, Python, Javascript, iOS, Android, Elasticsearch</p><p>Problem space: mobile commerce, big data, search, machine learning, reverse engineering, distributed systems, location services, user experience.</p><p><a href='https://curbside.com/jobs' rel='nofollow'>https://curbside.com/jobs</a> • Palo Alto, Ca. • Relocation Available • Sorry at this time we cannot sponsor NEW H-1B’s, but we can transfer existing visa’s and sponsor new E3’s, TN’s, and O-1’s.</p></span>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "JhFanPPjTo2b_Qzwp5lPgA",
+    "url": "https://remote.co/job/senior-consultant-facility-auditing-and-coding/",
+    "title": "Senior Consultant – Facility Auditing and Coding",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:jersey/java/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=8, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/java",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "java"
+    ],
+    "hiringOrganization": {
+      "name": "Change Healthcare",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 20,
+      "maxValue": 20,
+      "info": "",
+      "unit": "WEEK",
+      "parser": "SalaryParserLargeText",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 3, 2018 4:57:35 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Senior Consultant – Facility Auditing and Coding at <span>Change Healthcare</span></h2><div><span><i></i> Remote</span>        </div><div>            <ul><li><strong>Part-time</strong></li><li>R2854</li><li><strong>Locations:</strong><ul><li><strong>Remote – Georgia</strong></li><li><strong>Remote – Alaska</strong></li><li><strong>Remote – Alabama</strong></li><li><strong>Remote – Maryland</strong></li><li><strong>Remote – Maine</strong></li><li><strong>Remote – Louisiana</strong></li><li><strong>Remote – Kentucky</strong></li><li><strong>Remote – Kansas</strong></li><li><strong>Remote – Iowa</strong></li><li><strong>Remote – Indiana</strong></li><li><strong>Remote – Wyoming</strong></li><li><strong>Remote – Oregon</strong></li><li><strong>Remote – Wisconsin</strong></li><li><strong>Remote – New Hampshire</strong></li><li><strong>Remote – Nevada</strong></li><li><strong>Remote – West Virginia</strong></li><li><strong>Remote – Nebraska</strong></li><li><strong>Remote – Washington</strong></li><li><strong>Remote – Montana</strong></li><li><strong>Remote – Virginia</strong></li><li><strong>Remote – Missouri</strong></li><li><strong>Remote – Vermont</strong></li><li><strong>Remote – Mississippi</strong></li><li><strong>Remote – Utah</strong></li><li><strong>Remote – Texas</strong></li><li><strong>Remote – Minnesota</strong></li><li><strong>Remote – Michigan</strong></li><li><strong>Remote – Ohio</strong></li><li><strong>Remote – Tennessee</strong></li><li><strong>Remote – Massachusetts</strong></li><li><strong>Remote – South Dakota</strong></li><li><strong>Remote – South Carolina</strong></li><li><strong>Remote – North Dakota</strong></li><li><strong>Remote – Rhode Island</strong></li><li><strong>Remote – North Carolina</strong></li><li><strong>Remote – Pennsylvania</strong></li><li><strong>Remote – New York</strong></li><li><strong>Remote – New Mexico</strong></li><li><strong>Remote – New Jersey</strong></li><li><strong>Remote – Illinois</strong></li><li><strong>Remote – Idaho</strong></li><li><strong>Remote – Hawaii</strong></li><li><strong>Remote – Florida</strong></li><li><strong>Remote – Delaware</strong></li><li><strong>Remote – DC</strong></li><li><strong>Remote – Connecticut</strong></li><li><strong>Remote – Colorado</strong></li><li><strong>Remote – Oklahoma</strong></li><li><strong>Remote – California</strong></li><li><strong>Remote – Arkansas</strong></li><li><strong>Remote – Arizona</strong></li></ul></li></ul><p>Transforming the future of healthcare isn’t something we take lightly. It takes teams of the best and the brightest, working together to make an impact.<br>As one of the largest healthcare technology companies in the U.S., we are a catalyst to accelerate the journey toward improved lives and healthier communities.<br>Here at Change Healthcare, we’re using our influence to drive positive changes across the industry, and we want motivated and passionate people like you to help us continue to bring new and innovative ideas to life.</p><p>If you’re ready to embrace your passion and do what you love with a company that’s committed to supporting your future, then you belong at Change Healthcare. Pursue purpose. Champion innovation. Earn trust. Be agile. Include all.</p><p><strong>Empower Your Future. Make a Difference.</strong></p><p><strong>Senior Consultant PRN (Part-Time)<br>Reports To:&nbsp;</strong>Senior Director, Facility Coding &amp; Reimbursement Services</p><p><strong>CURRENT NEED</strong><br>The<strong>&nbsp;Senior Consultant</strong>&nbsp;provides audit services to clients as assigned. All audit is performed with a focus on accuracy and completeness with an understanding that payment optimization is an outcome of correct code assignment rather than a separate process. Detailed knowledge of official coding guidelines and CMS regulations as they pertain to IPPS and OPPS reimbursement.</p><p><strong>JOB RESPONSIBILITIES</strong></p><ul><li>Conduct coding quality reviews on Coding Consultants while on assignment as needed.</li><li>Complete client reports that contain objectives, findings, observations, and recommendations for improvement.</li><li>Provide in-service education to clients as part of audit projects.</li><li>Serve as Team Leader for a client when multiple consultants are assigned.</li><li>Assist in the design and presentation of educational seminars to clients as requested by the Senior Director.</li><li>Provide audit services including ICD-10-CM/PCS Coding, CPT-4 coding, abstracting, and DRG and APC reviews in all health care settings.</li><li>Attend continuing education classes to maintain proficiency in areas of coding that include but are not limited to ICD-10-CM/PCS, CPT-4, ambulatory surgery, ambulatory care, and OPPS coding.</li><li>Participate in Change Healthcare coding quality review as deemed appropriate by the Senior Director.</li><li>Comply with Change Healthcare’s policies regarding the use and disclosure of protected health information which includes accessing and using protected health information only to the extent necessary to fulfill the above-mentioned responsibilities.</li></ul><p><strong>MINIMUM REQUIREMENT</strong></p><ul><li>At least 3 yrs of business experience in inpatient and outpatient coding services including but not limited to ICD-9-CM and CPT-4 coding skills preferably as a consultant.</li></ul><p><strong>EDUCATION</strong></p><ul><li><strong>Baccalaureate degree in related</strong><strong>&nbsp;</strong><strong>healthcare field preferred or associate’s degree and/or equivalent business experience.</strong></li><li><strong>Credential</strong><strong>&nbsp;of RHIA, RHIT or CCS.</strong></li></ul><p><strong>CRITICAL SKILLS</strong></p><ul><li>Excellent oral and written communication skills.</li><li>Knowledge of Microsoft Office products including Word and Excel.</li><li>Understanding of medical terminology, and medical records content, format, and other pertinent procedures.</li><li>Demonstrated ability to initiate services at a new client facility.</li><li>AHIMA approved ICD-10-CM/PCS trainer a plus</li></ul><p><strong>ADDITIONAL SKILLS &amp; KNOWLEDGE</strong></p><ul><li>Flexible, detail-oriented, and ability to be a positive influence on others,</li><li>Ability to work independently, willingness to take ownership of responsibilities, quality conscious, dependable.</li><li>Ability to adapt well to change.</li></ul><p><strong>PLEASE NOTE: This is a part-time position that may offer up to 20 hours a week. Based upon business needs, it could offer more hours and/or potentially develop into a full-time opportunity.</strong></p><p><strong>Benefits &amp; Company Statement</strong><br>Change Healthcare is one of the largest, independent healthcare technology companies in the United States. We are a key catalyst of a value-based healthcare system working alongside our customers and partners to accelerate the journey towards improved lives and healthier communities.</p><p>We provide software and analytics, network solutions and technology-enabled services that help our customers obtain actionable insights, exchange mission-critical information, control costs, optimize revenue opportunities, increase cash flow and effectively navigate the shift to value-based healthcare. Our solutions enable improved efficiencies and insights for all major stakeholders across the healthcare system, including commercial and governmental payers, employers, hospitals, physicians and other providers, laboratories and consumers.</p><p><strong>Change Healthcare is an equal opportunity and affirmative action employer minorities/females/veterans/persons with disabilities.</strong><br>Qualified applicants will not be disqualified from consideration for employment based upon criminal history.</p><p><strong>Agency Statement</strong><br>No agencies please.</p><p>Join our team today where we are creating a better coordinated, increasingly collaborative, and more efficient healthcare system!</p>        </div><div>        <a href='https://changehealthcare.wd5.myworkdayjobs.com/en-US/Search/job/Remote---Georgia/Senior-Consultant---Facility-Auditing---Coding---Part-Time-_R2854' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "ZdUvg7hJSvmwLkRxydQKmA",
     "url": "https://remote.co/job/text-team-coordinator/",
     "title": "Text Team Coordinator",
